--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ Good Friday 14th April 6pm till 8:30pm<br/>
 Beaumont Centre, Coleorton, Leicestershire LE67 8HN £12 Ticket.<br/>
 Tickets selling fast.<br/>
 Book soon to avoid disapointment<br/>
-<a href="https://www.facebook.com/LoughboroughLoveVintage">LoughboroughLoveVintage</a> Vintage Tea Dance.<br/>
+<a href="https://www.facebook.com/LoughboroughLovesVintage">LoughboroughLovesVintage</a> Vintage Tea Dance.<br/>
 I'll be singing Rock n Roll while <a href="https://www.facebook.com/DanceWithRedAndGinger">Red and Ginger</a> lead the dancing.<br/>
 Come dance with us.
 </P>
