--- a/index.html
+++ b/index.html
@@ -235,6 +235,26 @@ Come dance with us.
 </DIV>
 
 
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="music.html"><img class="boxImageBigger" src="photos/andybgoode0028-thumb.jpg" alt="Vintage Love EP"></a></TD>
+<TD><DIV class="boxHeading">VINTAGE LOVE EP</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+My 'Love' EP is now available<br/>
+5 pounds for 5 Romantic Vintage Tracks.<br/>
+It makes a lovely gift for that special someone.<br/>
+Contact me or meet me at a gig to get yours.<br/>
+Or click to download each mp3 for free.<br/>
+<a href="media/001_-_AndyBGoode_-_Let There Be Love.mp3" download>'Let There Be Love'</a><br/>
+<a href="media/002_-_AndyBGoode_-_You Make Me Feel So Young.mp3" download>'You Make Me Feel So Young'</a><br/>
+<a href="media/003_-_AndyBGoode_-_Earth Angel.mp3" download>'Earth Angel'</a><br/>
+<a href="media/004_-_AndyBGoode_-_LOVE.mp3" download>'L-O-V-E'</a><br/>
+<a href="media/005_-_AndyBGoode_-_Poetry in Motion.mp3" download>'Poetry in Motion'</a><br/>
+</P>
+</DIV>
+
+
 </div>
 </div>
 
