--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@ Beaumont Centre, Coleorton, Leicestershire LE67 8HN £12 Ticket.<br/>
 Tickets selling fast.<br/>
 Book soon to avoid disapointment<br/>
 <a href="https://www.facebook.com/LoughboroughLovesVintage">LoughboroughLovesVintage</a> Vintage Tea Dance.<br/>
-I'll be singing Rock n Roll while <a href="https://www.facebook.com/DanceWithRedAndGinger">Red and Ginger</a> lead the dancing.<br/>
+I'll be singing Rock n Roll while fabulous <a href="https://www.facebook.com/DanceWithRedAndGinger">Red and Ginger</a> lead the dancing.<br/>
+They are a pair of top quality dance teachers who defy gravity with their fancy footwork.<br/>
 Come dance with us.
 </P>
 </DIV>
@@ -270,7 +271,7 @@ Or click to download each mp3 for free.<br/>
 <li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
-<li id="liWebsite">Version: v2.1.8</li>
+<li id="liWebsite">Version: v2.1.9</li>
 </ul>
 </DIV>
 <DIV class="boxPanelNoBorder">
