links to demo tracks

--- a/music.html
+++ b/music.html
@@ -93,7 +93,7 @@ Click on the album art to start the download of the free mp3.</TD></TR>
 </DIV>
 
 
-<DIV class="boxPanel">
+<DIV id="musicJohnny" class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <TR><TD><a href="media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img class="boxImage" src="images/demojohnnybgoodeart.jpg" alt="Johnny B Goode"></a></TD>
 <TD><DIV class="boxHeading">JOHNNY B. GOODE</DIV></TD></TR>
@@ -107,7 +107,7 @@ My cover of this aims to capture the feeling of that original.<br/>
 </DIV>
 
 
-<DIV class="boxPanel">
+<DIV id="musicLetThereBeLove" class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <TR><TD><a href="media/001_-_AndyBGoode_-_Let There Be Love.mp3" download><img class="boxImage" src="images/demolettherebelove.jpg" alt="Let There Be Love"></a></TD>
 <TD><DIV class="boxHeading">LET THERE BE LOVE</DIV></TD></TR>
@@ -121,7 +121,7 @@ What a romantic song for lovers on a date night.<br/>
 </DIV>
 
 
-<DIV class="boxPanel">
+<DIV id="musicYoung" class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <TR><TD><a href="media/002_-_AndyBGoode_-_You Make Me Feel So Young.mp3" download><img class="boxImage" src="images/demoyoung.jpg" alt="You Make Me Feel So Young"></a></TD>
 <TD><DIV class="boxHeading">YOU MAKE ME FEEL SO YOUNG</DIV></TD></TR>
@@ -133,7 +133,7 @@ One of my favourite Frank Sinatra classic crooning hits. From 1956 it really sum
 </P>
 </DIV>
 
-<DIV class="boxPanel">
+<DIV id="musicEarth" class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <TR><TD><a href="media/003_-_AndyBGoode_-_Earth Angel.mp3" download><img class="boxImage" src="images/demoearthangelart.jpg" alt="Earth Angel"></a></TD>
 <TD><DIV class="boxHeading">EARTH ANGEL</DIV></TD></TR>
@@ -145,7 +145,7 @@ I find performing this song passionately very enjoyable.<br/>
 </P>
 </DIV>
 
-<DIV class="boxPanel">
+<DIV id="musicLove" class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <TR><TD><a href="media/004_-_AndyBGoode_-_LOVE.mp3" download><img class="boxImage" src="images/demolove.jpg" alt="LOVE"></a></TD>
 <TD><DIV class="boxHeading">L-O-V-E</DIV></TD></TR>
@@ -159,7 +159,7 @@ Any song that helps you spell can't be bad.<br/>
 </P>
 </DIV>
 
-<DIV class="boxPanel">
+<DIV id="musicPoetry" class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <TR><TD><a href="media/005_-_AndyBGoode_-_Poetry in Motion.mp3" download><img class="boxImage" src="images/demopoetry.jpg" alt="Poetry in Motion"></a></TD>
 <TD><DIV class="boxHeading">POETRY IN MOTION</DIV></TD></TR>
@@ -172,7 +172,7 @@ A hit in 1960 by Johnny Tillotson this conjures up images lovely girls moving be
 </P>
 </DIV>
 
-<DIV class="boxPanel">
+<DIV id="musicApple" class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <TR><TD><a href="media/001_-_TheJaysVintage_-_Dont_Sit_Under_The_Apple_Tree.mp3" download><img class="boxImage" src="images/demoappletreeart.jpg" alt="Dont Sit Under The Apple Tree"></a></TD>
 <TD><DIV class="boxHeading">THE JAYS VINTAGE:<br/>DONT SIT UNDER THE APPLE TREE</DIV></TD></TR>
