--- a/songlist.html
+++ b/songlist.html
@@ -111,7 +111,7 @@ Frankie Lymon: Why Do Fools Fall in Love<br/>
 Dion and The Belmonts: <a href="videos.html#videoTeenagerInLove">A Teenager in Love</a><br/>
 The Penguins: <a href="videos.html#videoEarthAngel">Earth Angel (Will You Be Mine)</a><br/>
 Little Anthony and The Imperials: Tears on my Pillow<br/>
-Johnny Tillotson: Poetry in Motion<br/>
+Johnny Tillotson: <a href="music.html#musicPoetry">Poetry in Motion</a><br/>
 Cliff Richard: Living Doll, Move It<br/>
 Chris Montez: Let's Dance<br/>
 Roy Orbison: Ooby Dooby; Oh, Pretty Woman<br/>
@@ -152,10 +152,10 @@ Shakin' Stevens: Merry Xmas Everyone<br/>
 <td><DIV class="boxHeading">CROONER / SWING HITS</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-Frank Sinatra: Fly Me To The Moon; Cheek To Cheek; Come Fly With Me; You Make Me Feel So Young<br/>
+Frank Sinatra: Fly Me To The Moon; Cheek To Cheek; Come Fly With Me; <a href="music.html#musicYoung">You Make Me Feel So Young</a><br/>
 Bobby Darin: Mack the Knife; Beyond the Sea; Things<br/>
 Dean Martin: Memories Are Made Of This, How D'Ya Like Your Eggs in the Morning<br/>
-Nat King Cole: L.O.V.E.<br/>
+Nat King Cole: <a href="music.html#musicLove">L-O-V-E</a>, <a href="music.html#musicLetThereBeLove">Let There Be Love</a><br/>
 Michael Bublé: You've Got A Friend In Me<br/>
 </P>
 </DIV>
@@ -177,7 +177,7 @@ Michael Bublé: You've Got A Friend In Me<br/>
 <li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
-<li id="liWebsite">Version: v2.1.8</li>
+<li id="liWebsite">Version: v2.1.9</li>
 </ul>
 </DIV>
 <DIV class="boxPanelNoBorder">
