--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@ My 'Love' EP is now available<br/>
 It makes a lovely gift for that special someone.<br/>
 Contact me or meet me at a gig to get yours.<br/>
 Or click to download each mp3 for free.<br/>
-<a href="media/001_-_AndyBGoode_-_Let There Be Love.mp3" download>'Let There Be Love'</a><br/>
-<a href="media/002_-_AndyBGoode_-_You Make Me Feel So Young.mp3" download>'You Make Me Feel So Young'</a><br/>
-<a href="media/003_-_AndyBGoode_-_Earth Angel.mp3" download>'Earth Angel'</a><br/>
-<a href="media/004_-_AndyBGoode_-_LOVE.mp3" download>'L-O-V-E'</a><br/>
-<a href="media/005_-_AndyBGoode_-_Poetry in Motion.mp3" download>'Poetry in Motion'</a><br/>
+<a href="music.html#musicLetThereBeLove">'Let There Be Love'</a><br/>
+<a href="music.html#musicYoung">'You Make Me Feel So Young'</a><br/>
+<a href="music.html#musicEarth">'Earth Angel'</a><br/>
+<a href="music.html#musicLove">'L-O-V-E'</a><br/>
+<a href="music.html#musicPoetry">'Poetry in Motion'</a><br/>
 </P>
 </DIV>
 
