--- a/videos.html
+++ b/videos.html
@@ -161,24 +161,92 @@ I just keep singing songs from the 'Back to the Future' movie.</TD></TR>
 <br/>
 
 
-<DIV id="videoDemoAppleTree" class="infoBlock">
+
+
+
+<DIV id="videoAppleTreeBurton" class="infoBlock">
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
-<TR><TD><DIV class="boxHeading">DONT SIT UNDER THE APPLE TREE</DIV></TD></TR>
+<TR><TD><DIV class="boxHeading">DONT SIT UNDER THE APPLE TREE 'LIVE'</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-Many of these photos were taken at the lovely <a href="http://www.middleton-hall.co.uk/">Middleton Hall</a> near Tamworth by the talented <a href="https://www.facebook.com/pages/LJCreations/140122119344116">L. J. Creations</a> ... Many thanks!<br/>
+This was recorded live at Red Carpet Cinema at Barton Marina.<br/>
 </P>
 </DIV>
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
-<TR><TD>I am delighted to share 'The Jays Vintage' demo track 'Don't Sit Under The Apple Tree', a wonderful hit released during the second world war by the Andrews Sisters.</TD></TR>
+<TR><TD>The Jays Vintage (Vintage Vocal Harmony Tribute Group) performs the Andrews Sisters classic, "Don't Sit Under The Apple Tree".</TD></TR>
 </TABLE>
 </DIV>
 </DIV>
 <br/>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/4bxYcisdlSM" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xCA3tkEdPoc" frameborder="0" allowfullscreen></iframe>
 <br/>
+
+ 
+
+<DIV id="videoInTheMoodBurton" class="infoBlock">
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD><DIV class="boxHeading">IN THE MOOD 'LIVE'</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+This was recorded live at Red Carpet Cinema at Barton Marina.<br/>
+</P>
+</DIV>
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD>The Jays Vintage (Vintage Vocal Harmony Tribute Group) performs the Andrews Sisters classic, "In The Mood".</TD></TR>
+</TABLE>
+</DIV>
+</DIV>
+<br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jmuOGvFlFhw" frameborder="0" allowfullscreen></iframe>
+<br/>
+
+
+<DIV id="videoSantaClausBurton" class="infoBlock">
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD><DIV class="boxHeading">SANTA CLAUS IS COMING TO TOWN 'LIVE'</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+This was recorded live at Red Carpet Cinema at Barton Marina.<br/>
+</P>
+</DIV>
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD>The Jays Vintage (Vintage Vocal Harmony Tribute Group) performs the Perry Como Christmas classic, "Santa Claus is Coming To Town".</TD></TR>
+</TABLE>
+</DIV>
+</DIV>
+<br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9WMEWi1d5m4" frameborder="0" allowfullscreen></iframe>
+<br/>
+
+
+  
+
+<DIV id="videoDemoAppleTree" class="infoBlock">
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD><DIV class="boxHeading">DONT SIT UNDER THE APPLE TREE 2014</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Many of these photos were taken at the lovely Middleton Hall near Tamworth, back when there were 5 Jays.<br/>
+</P>
+</DIV>
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD>We are delighted to share our 2014 demo track 'Don't Sit Under The Apple Tree', a wonderful hit released during the second world war by the Andrews Sisters.</TD></TR>
+</TABLE>
+</DIV>
+</DIV>
+<br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/kpdZjNMW4s8" frameborder="0" allowfullscreen></iframe>
+<br/>
+
+
 
 
 </div>
@@ -198,7 +266,7 @@ Many of these photos were taken at the lovely <a href="http://www.middleton-hall
 <li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
-<li id="liWebsite">Version: v2.1.8</li>
+<li id="liWebsite">Version: v2.2.0</li>
 </ul>
 </DIV>
 <DIV class="boxPanelNoBorder">
