Video urls at top of page

--- a/videos.html
+++ b/videos.html
@@ -81,6 +81,38 @@
 <DIV id="videoSummerShowReel2016" class="infoBlock">
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
+
+<TR><TD>
+<a href="videos.html#videoSummerShowReel2016">Andy B Goode Summer Showreel 2016</a><br/>
+<a href="videos.html#videoTeenagerInLove">Teenager in Love</a><br/>
+<a href="videos.html#videoJohnnyBGoode">Johnny B. Goode</a><br/>
+<a href="videos.html#videoEarthAngel">Earth Angel</a><br/>
+</TD></TR>
+
+</TABLE>
+</DIV>
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+
+<TR><TD>
+<a href="videos.html#videoAppleTreeLive">Jays: Don't Sit Under The Apple Tree (Live)</a><br/>
+<a href="videos.html#videoInTheMoodLive">Jays: In The Mood (Live)</a><br/>
+<a href="videos.html#videoSantaClausLive">Jays: Santa Claus is Coming To Town (Live)</a><br/>
+<a href="videos.html#videoDemoAppleTree">Jays: Don't Sit Under The Apple Tree (2014)</a><br/>
+</TD></TR>
+
+</TABLE>
+</DIV>
+</DIV>
+<br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/f4x4ei3muL8" frameborder="0" allowfullscreen></iframe>
+<br/>
+
+
+
+<DIV id="videoSummerShowReel2016" class="infoBlock">
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
 <TR><TD><DIV class="boxHeading">SUMMER SHOWREEL 2016</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
@@ -164,13 +196,13 @@ I just keep singing songs from the 'Back to the Future' movie.</TD></TR>
 
 
 
-<DIV id="videoAppleTreeBurton" class="infoBlock">
+<DIV id="videoAppleTreeLive" class="infoBlock">
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
 <TR><TD><DIV class="boxHeading">DONT SIT UNDER THE APPLE TREE 'LIVE'</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-This was recorded live at Red Carpet Cinema at Barton Marina.<br/>
+This was recorded live at <a href="http://www.redcarpetcinema.co.uk/">Red Carpet Cinema</a> at Barton Marina.<br/>
 </P>
 </DIV>
 <DIV class="boxPanelNoBorder">
@@ -185,13 +217,13 @@ This was recorded live at Red Carpet Cinema at Barton Marina.<br/>
 
  
 
-<DIV id="videoInTheMoodBurton" class="infoBlock">
+<DIV id="videoInTheMoodLive" class="infoBlock">
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
 <TR><TD><DIV class="boxHeading">IN THE MOOD 'LIVE'</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-This was recorded live at Red Carpet Cinema at Barton Marina.<br/>
+This was recorded live at <a href="http://www.redcarpetcinema.co.uk/">Red Carpet Cinema</a> at Barton Marina.<br/>
 </P>
 </DIV>
 <DIV class="boxPanelNoBorder">
@@ -205,13 +237,13 @@ This was recorded live at Red Carpet Cinema at Barton Marina.<br/>
 <br/>
 
 
-<DIV id="videoSantaClausBurton" class="infoBlock">
+<DIV id="videoSantaClausLive" class="infoBlock">
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
 <TR><TD><DIV class="boxHeading">SANTA CLAUS IS COMING TO TOWN 'LIVE'</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-This was recorded live at Red Carpet Cinema at Barton Marina.<br/>
+This was recorded live at <a href="http://www.redcarpetcinema.co.uk/">Red Carpet Cinema</a> at Barton Marina.<br/>
 </P>
 </DIV>
 <DIV class="boxPanelNoBorder">
@@ -233,7 +265,7 @@ This was recorded live at Red Carpet Cinema at Barton Marina.<br/>
 <TR><TD><DIV class="boxHeading">DONT SIT UNDER THE APPLE TREE 2014</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-Many of these photos were taken at the lovely Middleton Hall near Tamworth, back when there were 5 Jays.<br/>
+Many of these photos were taken at the lovely <a href="http://www.middleton-hall.co.uk/">Middleton Hall</a> near Tamworth by the talented <a href="https://www.facebook.com/pages/LJCreations/140122119344116">L. J. Creations</a>, back when there were 5 Jays.<br/>
 </P>
 </DIV>
 <DIV class="boxPanelNoBorder">
