More people + Testimonials now uses standard js header, menu + footer

--- a/testimonials.html
+++ b/testimonials.html
@@ -51,22 +51,17 @@
   ga('create', 'UA-77123620-1', 'auto');
   ga('send', 'pageview');
 </script>
+
+<script src="misc/andybgoode-standard.js"></script>
+
 </head>
 
 <body>
 
-<h1><img id="logo" src="images/logo.gif" alt="AndyBGoode Logo"> Andy B Goode</h1>
-
-<div class="menu">
-<a href="index.html">Home</a>
-<a href="news.html">News</a>
-<a href="photos.html">Photos</a>
-<a href="music.html">Music</a>
-<a href="videos.html">Videos</a>
-<a href="songlist.html">Songs</a>
-<a href="testimonials.html">Testimonials</a>
-<a href="#contact">Contact</a>
+<div id="mainHeader">
+Andy B Goode 1950s/60s Rock n Roll/Swing Singer
 </div>
+
 
  
 
@@ -90,9 +85,28 @@ If you have any comments, please do contact me.<br/>
 "'Andy B Goode' is a splendid performer who gives consistently good performance across a wide range of singing styles."<br/>
 "'La Bamba' is especially good to hear. Perfect for weddings, christenings, birthdays etc.  Would highly recommend."
 </td>
-<td><a href="photos.html"><img src="photos/andybgoode0012-thumb.jpg" alt="Dosthill Vintage Summer Fayre"></a></td>
+<td><a href="photos.html"><img class='boxImageBigger' src="photos/andybgoode0012-thumb.jpg" alt="Dosthill Vintage Summer Fayre"></a></td>
 </tr>
- 
+
+<tr>
+<td>
+<h3>Rev L. Shaw (Dosthill, Church Fete)</h3>
+"He created the perfect atmosphere."<br/>
+"Visitors to the fete and people on stalls were bopping away and enjoying the well known songs."<br/>
+"Andy B Goode was a quality addition to our fete and really made the day"
+</td>
+<td><a href="photos.html"><img class='boxImageBigger' class='boxImageBigger' src="photos/andybgoode0029-thumb.jpg" alt="Dosthill Church Fete"></a></td>
+</tr>
+
+<tr>
+<td>
+<h3>N.Bauer (Polesworth, Vintage and Antiques Fair)</h3>
+"The Act was awesome full a great mix of songs, and how you helped us by making the announcements for us was more than we expected."<br/>
+"He has an amazing voice and a thoroughly nice chap. If you need some vintage Rock N Roll, you need Andy B Goode."
+</td>
+<td><a href="photos.html"><img class='boxImageBigger' class='boxImageBigger' src="photos/andybgoode0019-thumb.jpg" alt="Polesworth Vintage and Antiques Fair"></a></td>
+</tr>
+
 <tr>
 <td>
 <h3>E. Cutler (Dosthill, Vintage Fayre)</h3>
@@ -100,7 +114,7 @@ If you have any comments, please do contact me.<br/>
 "Having Andy B Goode at our vintage fair really set the scene and made the vintage context."<br/>
 "It was lovely to see people of all ages stop, sit and listen, sing along or boogie on down."
 </td>
-<td><a href="photos.html"><img src="photos/andybgoode0011-thumb.jpg" alt="Dosthill Vintage Summer Fayre"></a></td>
+<td><a href="photos.html"><img class='boxImageBigger' class='boxImageBigger' src="photos/andybgoode0011-thumb.jpg" alt="Dosthill Vintage Summer Fayre"></a></td>
 </tr>
  
 <tr>
@@ -110,7 +124,7 @@ If you have any comments, please do contact me.<br/>
 "If anyone is looking for a fun, professional singing act, 'Andy B Goode' is the guy for you."<br/>
 "it doesn't matter the age group as the type of songs 'Andy B Goode' sings, he gets everybody singing and dancing along. Highly recommended."
 </td>
-<td><a href="photos.html"><img src="photos/andybgoode0016-thumb.jpg" alt="Birthday Party"></a></td>
+<td><a href="photos.html"><img class='boxImageBigger' src="photos/andybgoode0016-thumb.jpg" alt="Birthday Party"></a></td>
 </tr>
  
 <tr>
@@ -120,7 +134,7 @@ If you have any comments, please do contact me.<br/>
 "very entertaining - great show to sit and watch from start to finish, but also worked well as background music for people that were wandering in and out of the refreshment area, at our village fair"<br/>
 "The song selection was great and Andrew performance is suitable for a wide variety of events"
 </td>
-<td><a href="photos.html"><img src="photos/andybgoode0017-thumb.jpg" alt="Village Fair"></a></td>
+<td><a href="photos.html"><img class='boxImageBigger' src="photos/andybgoode0017-thumb.jpg" alt="Village Fair"></a></td>
 </tr>
  
 <tr>
@@ -129,7 +143,7 @@ If you have any comments, please do contact me.<br/>
 "Totally! Fab evening completely brought to life with the excellent entertainment!"<br/>
 "Everyone commented about the great atmosphere with your music.  A great party atmosphere and very pro! Loved it!"
 </td>
-<td><a href="photos.html"><img src="photos/andybgoode0005-thumb.jpg" alt="Birthday Party"></a></td>
+<td><a href="photos.html"><img class='boxImageBigger' src="photos/andybgoode0005-thumb.jpg" alt="Birthday Party"></a></td>
 </tr>
  
 <tr>
@@ -138,18 +152,56 @@ If you have any comments, please do contact me.<br/>
 "The act was very good and met the expectations of the audience"<br/>
 "Great evening - people singing along with some rock classics and a great party atmosphere"
 </td>
-<td><a href="photos.html"><img src="photos/andybgoode0015-thumb.jpg" alt="Birthday Party"></a></td>
+<td><a href="photos.html"><img class='boxImageBigger' src="photos/andybgoode0015-thumb.jpg" alt="Birthday Party"></a></td>
 </tr>
  
 <tr>
 <td>
-<h3>S. Britton (Tamworth Bandstand)</h3>
+<h3>S. Smith (Tamworth Bandstand near Tamworth Castle)</h3>
 "it was great, lot of familiar tunes which people enjoyed and danced to!"<br/>
 "Very upbeat and familiar set, great for a party, and for getting people dancing!"
 </td>
-<td><a href="photos.html"><img src="photos/thejays0006-thumb.jpg" alt="Andy B Goode and The Jays at Tamworth Bandstand"></a></td>
+<td><a href="photos.html"><img class='boxImageBigger' src="photos/thejays0006-thumb.jpg" alt="Andy B Goode and The Jays at Tamworth Bandstand"></a></td>
 </tr>
- 
+
+<tr>
+<td>
+<h3>Red and Ginger (Vintage Tea Dance)</h3>
+"We had a blast."<br/>
+"We loved way you played with the music for us to dance to."<br/>
+"This guy is awesome. If you're a dancer, book him!"
+</td>
+<td><a href="photos.html"><img class='boxImageBigger' src="images/redandginger-thumb.jpg" alt="Red and Ginger (Professional Dance Teachers)"></a></td>
+</tr>
+
+<tr>
+<td>
+<h3>L. May (Loughborough Loves Vintage Fair)</h3>
+"Andy, Thank you so SO much for today (I cannot actually thank you enough!!)."<br/>
+"You were absolutely brilliant, all day, and helped make the event a success."<br/>
+"I will definitely be in touch regarding the next event in Loughborough, and of course the August festival."
+</td>
+<td><a href="photos.html"><img class='boxImageBigger' src="photos/andybgoode0027-thumb.jpg" alt="Loughborough Loves Vintage Fair"></a></td>
+</tr>
+
+<tr>
+<td>
+<h3>S. Greenwood (Her Wedding Reception)</h3>
+"Thank you so much Andy you were fantastic and made our wedding day more magical x x x."
+</td>
+<td><a href="photos.html"><img class='boxImageBigger' src="photos/thejays0027-thumb.jpg" alt="Wedding Reception"></a></td>
+</tr>
+
+<tr>
+<td>
+<h3>L. Smith (Care Home)</h3>
+"The residents were still talking about you this morning."<br/>
+"Thanks again and see you soon."<br/>
+"It was fantastic!!"
+</td>
+<td><a href="photos.html"><img class='boxImageBigger' src="photos/andybgoode0030-thumb.jpg" alt="Care Home"></a></td>
+</tr>
+
 </table>
 
 
@@ -159,40 +211,13 @@ If you have any comments, please do contact me.<br/>
 
 
 
-<div id="contact" class="contact-area">
-<h2 class="banner">Contact me</h2>
-<div class="textbox-area">
-<DIV class="boxPanelNoBorder">
-<ul id="contactList">
-<li id="liPhone">Phone: 07415 338859</li>
-<li id="liEmail">email: <a href="mailto:Andy@AndyBGoode.com?Subject=Hi%20Andy" target="_top">Andy@AndyBGoode.com</a></li>
-<li id="liFacebook">Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
-<li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
-<li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
-<li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
-<li id="liWebsite">Version: v2.1.8</li>
-</ul>
-</DIV>
-<DIV class="boxPanelNoBorder">
-<TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0010-thumb.jpg" alt="AndyBGoode"></a></TD>
-<TD><a href="http://www.TheJaysVintage.com"><img class="boxImageBigger" src="photos/thejays0012-thumb.jpg" alt="TheJaysVintage"></a></TD></TR>
-</TABLE>
-</DIV>
-</div>
+<div id="pageFooter">
+Phone: 07415 338859<br/>email: <a href='mailto:Andy@AndyBGoode.com?Subject=Hi%20Andy' target='_top'>Andy@AndyBGoode.com</a><br/>Facebook: <a href='https://www.facebook.com/AndyBGoode'>AndyBGoode</a>
 </div>
 
-
-<div class="menu">
-<a href="index.html">Home</a>
-<a href="news.html">News</a>
-<a href="photos.html">Photos</a>
-<a href="music.html">Music</a>
-<a href="videos.html">Videos</a>
-<a href="songlist.html">Songs</a>
-<a href="testimonials.html">Testimonials</a>
-<a href="#contact">Contact</a>
-</div>
+<script>
+  displayPage();
+</script>
 
 
 </div>
