Upcoming gigs, news, test corrections

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--
- Copyright (C) 2016 Andrew Britton.
+ Copyright (C) 2017 Andrew Britton.
  All rights reserved
  -->
 <head>
@@ -81,7 +81,8 @@
 <DIV class="boxPanelNoBorder">
 <P class='boxInfoArea'>
 <ul>
-<li>1950s/60s Rock and Roll / Swing Singer.</li>
+<li>1950s/60s Rock and Roll Singer.</li>
+<li>1950s/60s Swing Singer.</li>
 <li>Let me enliven your events with some fun vintage 'Rock n Roll' music.</li>
 <li>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</li>
 </ul>
@@ -180,58 +181,8 @@ Loads of vintage fashion (both used and new). Hunt through collectables and othe
 Right now, I am offering gigs starting at just:<br/>
 £100 + travel expenses for a 1h performance.<br/>
 <!--Remember at this time of year, this could be used to bring some xmas cheer vintage style.<br/> -->
-This could be used to bring some vintage fun to a 70th or 80th birthday.<br/>
+This could be used to bring some vintage fun to a 70th/80th birthday or even a 50th Wedding Anniversay.<br/>
 Limited time offer, Terms and conditions apply.
-</P>
-</DIV>
-
-
-<DIV class="boxPanel">
-<TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageBigger" src="images/curlymagpie-thumb.jpg" alt="Curly Magpie"></a></td>
-<td><DIV class="boxHeading">VINTAGE AND HANDMADE FAIR</DIV></td></tr>
-</TABLE>
-<P class='boxInfoArea'>
-Sunday 12th March 2017  11am-4pm<br/>
-Calke Abbey.<br/>
-I am singing at the '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a> Vintage and Handmade Fair'.
-Calke Abbey is a lovely venue so do come along.<br/>
-I am singing 12:30pm to 1pm, 2pm to 3pm + 30mins later.<br/>
-Live entertainment is also coming from lovely <a href="https://www.facebook.com/RebeccaJayneVocalist">'Rebecca Jayne'</a> and the skilled <a href="https://www.facebook.com/Kevin-Goodall-Saxophonist-Weddings-Parties-Corporate-Events-257905277660041/">'Kevin Goodall Saxophonist'</a>. 
-</P>
-</DIV>
-
-
-<DIV class="boxPanel">
-<TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0014-thumb.jpg" alt="AndyBGoode"></a></TD>
-<TD><DIV class="boxHeading">SWINGING MOTHERS DAY AFTERNOON TEA</DIV></TD></TR>
-</TABLE>
-<P class='boxInfoArea'>
-Sunday 26th March 2pm till 6pm<br/>
-Old School Tea Rooms, 57 High Street, Ibstock, Leicestershire LE67 6LH.<br/>
-£15 Ticket (01530 267310).<br/>
-Listen to some Swing and Rock n Roll during Traditional Afternoon High Tea with a great selection of sandwiches, cakes and fancies plus teas and coffee.<br/>
-A most splendid '1916 Model T Ford' will be parked outside, so bring your camera.<br/>
-Come spend a lovely Mothering Sunday with us.
-</P>
-</DIV>
-
-
-<DIV class="boxPanel">
-<TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageBigger" src="images/redandginger-thumb.jpg" alt="Red and Ginger"></a></TD>
-<TD><DIV class="boxHeading">GOOD FRIDAY TEA DANCE</DIV></TD></TR>
-</TABLE>
-<P class='boxInfoArea'>
-Good Friday 14th April 6pm till 8:30pm<br/>
-Beaumont Centre, Coleorton, Leicestershire LE67 8HN £12 Ticket.<br/>
-Tickets selling fast.<br/>
-Book soon to avoid disapointment<br/>
-<a href="https://www.facebook.com/LoughboroughLovesVintage">LoughboroughLovesVintage</a> Vintage Tea Dance.<br/>
-I'll be singing Rock n Roll while fabulous <a href="https://www.facebook.com/DanceWithRedAndGinger">Red and Ginger</a> lead the dancing.<br/>
-They are a pair of top quality dance teachers who defy gravity with their fancy footwork.<br/>
-Come dance with us.
 </P>
 </DIV>
 
@@ -256,6 +207,93 @@ Or click to download each mp3 for free.<br/>
 </DIV>
 
 
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></td>
+<td><DIV class="boxHeading">UPCOMING PUBLIC GIGS: JUNE/JULY</DIV></td></tr>
+</TABLE>
+<P class='boxInfoArea'>
+I am delighted to announce some public gigs where vintage classics will be the order of the day. 
+Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony). 
+</P>
+<P class='boxInfoArea'>
+24 June 2017 10am till 3pm, Swadlincote Town Centre,
+Makers Market (ABG)
+</P>
+<P class='boxInfoArea'>
+8 July 2017 12 till 5pm, Norton Juxta Twycross,
+NJT Village Fete, 10 Orton Lane, Norton Juxta Twycross (ABG + Sophie)
+</P>
+<P class='boxInfoArea'>
+9 July 2017 11 till 3pm, Smethwick,
+Vintage in the Park Vintage Fair, B67 5DP (ABG)
+</P>
+<P class='boxInfoArea'>
+15 July 2017 Time TBC, Lichfield,
+Lichfield Fringe Festival (Jays)
+</P>
+<P class='boxInfoArea'>
+22 July 2017 10 till 2pm, Polesworth,
+Yesteryear Vintage Fair, B78 1QT (ABG)
+</P>
+<P class='boxInfoArea'>
+23 July 2017 12 till 4pm, Tamworth,
+Tamworth Bandstand (Jays)
+</P class='boxInfoArea'>
+<P class='boxInfoArea'>
+ABG: Andy B Goode solo gig.<br/>
+Jays: Andy B Goode and The Jays Vintage gig.
+</P class='boxInfoArea'>
+</DIV>
+
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0020-thumb.jpg" alt="AndyBGoode"></a></td>
+<td><DIV class="boxHeading">UPCOMING PUBLIC GIGS: AUGUST+</DIV></td></tr>
+</TABLE>
+<P class='boxInfoArea'>
+Heres some more public gigs from August 2017 and beyond.
+</P>
+<P class='boxInfoArea'>
+20 August 2017 Time TBC, Loughborough,
+Vintage Festival with Loughborough Loves Vintage (Jays)
+</P>
+<P class='boxInfoArea'>
+26 August 2017 10am till 3pm, Swadlincote Town Centre,
+Makers Market (ABG)
+</P>
+<P class='boxInfoArea'>
+30 Sept 2017 10am till 3pm, Swadlincote Town Centre,
+Makers Market (ABG)
+</P>
+<P class='boxInfoArea'>
+26 Nov 2017 Late Afternoon, Tamworth St Edithas Square,
+Tamworth Xmas Lights (Jays)
+</P>
+<P class='boxInfoArea'>
+ABG: Andy B Goode solo gig.<br/>
+Jays: Andy B Goode and The Jays Vintage gig.
+</P class='boxInfoArea'>
+</DIV>
+
+<!--
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0014-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">SWINGING MOTHERS DAY AFTERNOON TEA</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Sunday 26th March 2pm till 6pm<br/>
+Old School Tea Rooms, 57 High Street, Ibstock, Leicestershire LE67 6LH.<br/>
+£15 Ticket (01530 267310).<br/>
+Listen to some Swing and Rock n Roll during Traditional Afternoon High Tea with a great selection of sandwiches, cakes and fancies plus teas and coffee.<br/>
+A most splendid '1916 Model T Ford' will be parked outside, so bring your camera.<br/>
+Come spend a lovely Mothering Sunday with us.
+</P>
+</DIV>
+-->
+
 </div>
 </div>
 
@@ -271,7 +309,8 @@ Or click to download each mp3 for free.<br/>
 <li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
-<li id="liWebsite">Version: v2.1.9</li>
+<li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>
+<li id="liWebsite">Version: v2.2.0</li>
 </ul>
 </DIV>
 <DIV class="boxPanelNoBorder">
