--- a/news.html
+++ b/news.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--
- Copyright (C) 2016 Andrew Britton.
+ Copyright (C) 2017 Andrew Britton.
  All rights reserved
  -->
 <head>
@@ -43,24 +43,17 @@
   ga('create', 'UA-77123620-1', 'auto');
   ga('send', 'pageview');
 </script>
+
+<script src="misc/andybgoode-standard.js"></script>
+
 </head>
 
 <body>
 
-<h1><img id="logo" src="images/logo.gif" alt="AndyBGoode Logo"> Andy B Goode</h1>
-
-<div class="menu">
-<a href="index.html">Home</a>
-<a href="news.html">News</a>
-<a href="photos.html">Photos</a>
-<a href="music.html">Music</a>
-<a href="videos.html">Videos</a>
-<a href="songlist.html">Songs</a>
-<a href="testimonials.html">Testimonials</a>
-<a href="#contact">Contact</a>
+<div id="mainHeader">
+Andy B Goode 1950s/60s Rock n Roll/Swing Singer
 </div>
 
- 
 
 <div id="main">
 
@@ -135,15 +128,44 @@ Or click to download each mp3 for free.<br/>
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0027-thumb.jpg" alt="AndyBGoode"></a></TD>
-<TD><DIV class="boxHeading">LOUGHBOROUGH LOVES VINTAGE</DIV></TD></TR>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="images/redandginger-thumb.jpg" alt="Red and Ginger"></a></TD>
+<TD><DIV class="boxHeading">GOOD FRIDAY VINTAGE 1950s TEA DANCE</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-Sunday 12th Feb 11-3pm<br/>
-Rosebery St Peters Community Centre, Loughborough, LE11 5EQ<br/>
+April 2017, Coleorton.<br/>
+The <a href="https://www.facebook.com/LoughboroughLovesVintage">LoughboroughLovesVintage</a> Vintage 1950s Tea Dance was a big hit. 
+I sang Rock n Roll while fabulous <a href="https://www.facebook.com/DanceWithRedAndGinger">Red and Ginger</a> lead the dancing. 
+They are a pair of top quality dance teachers who defy gravity with their fancy footwork. I can whole-heartedly recommend them. 
+Can't wait for them to arrange more events!
+</P>
+</DIV>
+
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="images/curlymagpie-thumb.jpg" alt="Curly Magpie"></a></td>
+<td><DIV class="boxHeading">VINTAGE AND HANDMADE FAIR</DIV></td></tr>
+</TABLE>
+<P class='boxInfoArea'>
+March 2017, Calke Abbey.<br/>
+I sang at the '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a> Vintage and Handmade Fair'.
+The day was sunny and Calke Abbey was a beautiful venue.<br/>
+Live entertainment also came from the lovely female vintage soloist <a href="https://www.facebook.com/RebeccaJayneVocalist">'Rebecca Jayne'</a> and the skilled <a href="https://www.facebook.com/Kevin-Goodall-Saxophonist-Weddings-Parties-Corporate-Events-257905277660041/">'Kevin Goodall Saxophonist'</a>. 
+The fair was bustling with 1000s of people enjoying the day.
+</P>
+</DIV>
+
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0027-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">LOUGHBOROUGH LOVES VINTAGE FAIR</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Feb 2017, Rosebery St Peters Community Centre, Loughborough<br/>
 <a href="https://www.facebook.com/LoughboroughLovesVintage">LoughboroughLovesVintage</a> Vintage Fayre.<br/>
 A lovely little vintage afternoon.<br/>
-As it was nearly Valentines day week, I sang Rock and Roll and Crooning some Love songs. 
+As it was nearly Valentines day week, I sang Rock and Roll and Crooned some Love songs. 
 Also live entertainment came from the talented <a href="https://www.facebook.com/EleanorSings">'Eleanor Mattley'</a>. 
 There were Vintage stalls selling: clothing, accessories, homewares. 
 The 'Pop up tea room' served amazing cakes, milkshakes and afternoon Teas.
@@ -157,7 +179,7 @@ The 'Pop up tea room' served amazing cakes, milkshakes and afternoon Teas.
 <td><DIV class="boxHeading">SWADLINCOTE INTERNATIONAL FOOD AND DRINK FESTIVAL</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-Saturday 15th October 2016 - 11am<br/>
+October 2016, Swadlincote<br/>
 <a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a>' vintage shop. I sung classic Rock and Crooner tunes while people danced in the street.<br/>
 It was energetic 1950s Rock n Roll and tasty food from all over the world...What more could you want?
 </P>
@@ -192,7 +214,7 @@ Birthday Parties: I have done a few birthday parties over the summer, which were
 <td><DIV class="boxHeading">FOOD GUSTO FOOD FAIR</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-September 2016 <a href="http://www.foodgusto.com/tamworth-festival/">Food Gusto Fayre</a> (Tamworth Castle, Pleasure Grounds). A Food Festival in Tamworth. I performed with '<a href="https://www.facebook.com/TheJaysVintage">The Jays</a>' multiple times during the day.<br/>
+September 2016 <a href="http://www.foodgusto.com/tamworth-festival/">Food Gusto Fayre</a> in the Tamworth Castle, Pleasure Grounds. A Food Festival in Tamworth. I performed with '<a href="https://www.facebook.com/TheJaysVintage">The Jays Vintage</a>' multiple times during the day.<br/>
 What a lovely sunny day it was so the beautiful 1940s Andrews Sisters style Vintage Harmonies and Energetic 1950s Rock n Roll really added to the upbeat atmosphere. The food was so really varied and most tasty. So many spicy flavours. One for next years diary... I need some of those amazing meat pies and samosas.<br/>
 </P>
 </DIV>
@@ -204,7 +226,7 @@ What a lovely sunny day it was so the beautiful 1940s Andrews Sisters style Vint
 <td><DIV class="boxHeading">NORTON JUXTA TWYCROSS SUMMER VILLAGE FETE</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-Norton Juxta Twycross Summer Village Fete (June): I provided live music beside the swimming pool as people had a cream tea. This included: barbecue, cream teas, coconut shy, skittles competition, vintage steam engine, delicious home made ice cream, stalls and the annual dog show.<br/>
+June 2016, Norton Juxta Twycross Summer Village Fete: I provided live music beside the swimming pool as people had a cream tea. This included: barbecue, cream teas, coconut shy, skittles competition, vintage steam engine, delicious home made ice cream, stalls and the annual dog show.<br/>
 I performed "Teenager in Love" live on the top local radio station TCR FM (<a href="http://www.tcrfm.co.uk">www.tcrfm.co.uk</a>).<br/>
 </P>
 </DIV>
@@ -213,10 +235,12 @@ I performed "Teenager in Love" live on the top local radio station TCR FM (<a hr
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode at Polesworth"></a></td>
-<td><DIV class="boxHeading">WARWICKSHIRE AND ANTIQUE FAYRE</DIV></td></tr>
+<td><DIV class="boxHeading">WARWICKSHIRE VINTAGE AND ANTIQUES FAYRE</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-Warwickshire and Antique Fayre (July): This was a great local vintage fayre in Poleworth. Loads of stalls with Dresses and other collectables. I sang for a couple of hours to add a retro touch. I even bought a few xmas presents!<br/>
+July 2017, Warwickshire and Antiques Fayre: This was a great local vintage fayre in Poleworth. 
+Loads of stalls with Dresses and other collectables. I sang for a couple of hours to add a retro touch. 
+I even bought a few xmas presents!<br/>
 </P>
 </DIV>
 
@@ -227,7 +251,9 @@ Warwickshire and Antique Fayre (July): This was a great local vintage fayre in P
 <td><DIV class="boxHeading">DOSTHILL CHURCH VINTAGE FETE</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-St. Pauls Dosthill Summer Vintage Fete 2016: A classic British summer Fete in Dosthill at the pretty Church. Loads of stalls, a barbeque and yummy cakes were available. Many friends came and I sang lots of new songs (while avoiding the light showers). People joined in on some songs, which was lovely.<br/>
+June 2016, St. Pauls Dosthill Summer Vintage Fete: A classic British summer Fete in Dosthill at the pretty Church. 
+Loads of stalls, a barbeque and yummy cakes were available. Many friends came and I sang lots of new songs (while avoiding the light showers). 
+People joined in on some songs, which was lovely.<br/>
 </P>
 </DIV>
 
@@ -255,40 +281,13 @@ info<br/>
 
 
 
-<div id="contact" class="contact-area">
-<h2 class="banner">Contact me</h2>
-<div class="textbox-area">
-<DIV class="boxPanelNoBorder">
-<ul id="contactList">
-<li id="liPhone">Phone: 07415 338859</li>
-<li id="liEmail">email: <a href="mailto:Andy@AndyBGoode.com?Subject=Hi%20Andy" target="_top">Andy@AndyBGoode.com</a></li>
-<li id="liFacebook">Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
-<li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
-<li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
-<li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
-<li id="liWebsite">Version: v2.2.0</li>
-</ul>
-</DIV>
-<DIV class="boxPanelNoBorder">
-<TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0010-thumb.jpg" alt="AndyBGoode"></a></TD>
-<TD><a href="http://www.TheJaysVintage.com"><img class="boxImageBigger" src="photos/thejays0012-thumb.jpg" alt="TheJaysVintage"></a></TD></TR>
-</TABLE>
-</DIV>
-</div>
+<div id="pageFooter">
+Phone: 07415 338859<br/>email: <a href='mailto:Andy@AndyBGoode.com?Subject=Hi%20Andy' target='_top'>Andy@AndyBGoode.com</a><br/>Facebook: <a href='https://www.facebook.com/AndyBGoode'>AndyBGoode</a>
 </div>
 
-
-<div class="menu">
-<a href="index.html">Home</a>
-<a href="news.html">News</a>
-<a href="photos.html">Photos</a>
-<a href="music.html">Music</a>
-<a href="videos.html">Videos</a>
-<a href="songlist.html">Songs</a>
-<a href="testimonials.html">Testimonials</a>
-<a href="#contact">Contact</a>
-</div>
+<script>
+  displayPage();
+</script>
 
 
 </div>
