--- a/testinstagram.html
+++ b/testinstagram.html
@@ -295,6 +295,7 @@ Come spend a lovely Mothering Sunday with us.
 </DIV>
 -->
  
+<div id="instagram"></div>
 <div id="instafeed"></div>
  
 <script type="text/javascript">
