--- a/testinstagram.html
+++ b/testinstagram.html
@@ -299,6 +299,16 @@ Come spend a lovely Mothering Sunday with us.
 <div id="instafeed"></div>
  
 <script type="text/javascript">
+    var userFeed = new Instafeed({
+        get: 'user',
+        userId: '3153218281',
+        accessToken: '3153218281.1677ed0.a7ca15e521d244b69f85ef6fa1a54ba4'
+    });
+    userFeed.run();
+</script>
+ 
+<!--
+<script type="text/javascript">
     var feed = new Instafeed({
         get: 'tagged',
         tagName: 'andybgoodevocalist',
@@ -306,6 +316,8 @@ Come spend a lovely Mothering Sunday with us.
     });
     feed.run();
 </script>
+-->
+
  
 </div>
 </div>
